--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -139,6 +139,8 @@
             //$('body').removeClass('bg-img2');
             //$('body').removeClass('bg-img3');
             //$('body').removeClass('bg-img4');
+            $("#footerImgEU").html("").html('<img src="/assets/images/brand/EU_Horizontal3_small.png">');
+
 
             localStorage.setItem('darkMode', true);
             localStorage.removeItem('lightMode');
@@ -150,7 +152,7 @@
             //$('body').removeClass('bg-img2');
             //$('body').removeClass('bg-img3');
             //$('body').removeClass('bg-img4');
-            
+            $("#footerImgEU").html("").html('<img src="/assets/images/brand/EU_Horizontal2_small.png">');
 
             localStorage.setItem('lightMode', true);
             localStorage.removeItem('darkMode');
