--- a/MODAMSWeb/Views/Shared/layouts/_footer.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_footer.cshtml
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row align-items-left flex-row-reverse">
             <div class="col-md-12 col-sm-12 text-start">
-                <span class="float-left">
-                    <img src="~/assets/images/brand/EU_Small3.png"> Funded by European Union
+                <span class="float-left" id="footerImgEU">
+                    <img src="~/assets/images/brand/EU_Horizontal3_small.png">
                 </span>
-                <span class="float-end">
+                <span class="float-end" id="footerImgUNOPS">
                     <img src="~/assets/images/brand/logo_small.png">
                 </span>
             </div>
