--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -107,6 +107,9 @@
 
                 </div>
             </div>
+            <div class="card-footer">
+                <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+            </div>
         </div>
     </div>
     <section id="dvFacesData" style="display:none;"></section>
