--- a/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
@@ -39,6 +39,9 @@
             <div class="card-body project-list-table-container scroll" style="overflow-x: auto; overflow-y: auto;">
                 <div id="dvChart" style="height:550px;" class="p-5"></div>
             </div>
+            <div class="card-footer">
+                <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+            </div>
         </div>
 
     </div>
