--- a/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
@@ -124,6 +124,9 @@
                             
                         </div>
                     </div>
+                    <div class="card-footer">
+                        <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                    </div>
                 </div>
             </div>
         </div>
