--- a/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
@@ -93,6 +93,9 @@
                     </table>
                 </div>
             </div>
+            <div class="card-footer">
+                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+            </div>
         </div>
     </div>
     <div class="col-md-7 col-sm-7 mb-3">
