--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -128,6 +128,9 @@
                     </table>
                 </div>
             </div>
+            <div class="card-footer">
+                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+            </div>
         </div>
     </div>
 </div>
