--- a/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
@@ -108,7 +108,7 @@
                 <div class="row p-5">
                     <div class="btn-list">
                         <button id="btnSubmit" class="btn btn-primary"><i class="fe fe-check-circle"></i> Save Employee</button>
-                        <a asp-area="Admin" asp-controller="Employees" asp-action="Index" class="btn btn-outline-danger"> <i class="fe fe-x-circle"></i> Cancel</a>
+                        <a asp-area="Admin" asp-controller="Employees" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
                     </div>
                 </div>
             </div>
