--- a/MODAMSWeb/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -3,15 +3,6 @@
 @{
     ViewData["Title"] = "Access denied";
 }
-
-<div class="page-header">
-    <div class="ms-auto pageheader-btn">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Employee list</li>
-        </ol>
-    </div>
-</div>
 <style>
     .containerCenter {
         position: absolute;
@@ -27,5 +18,16 @@
     <div class="text-center">
         <h3 class="text-danger text-center">Access Denied</h3>
         <h5 class="text-center">You are not authorized to access this content, please contact the system administrator</h5>
+        <br />
+        <a href="@Request.Headers["Referer"].ToString()">Back</a>
     </div>
 </div>
+@section Scripts{
+    <script>
+        $(document).ready(() => {
+            $("#hideMenu").click();
+        });
+
+
+    </script>
+}
