--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -23,6 +23,13 @@
     <link href="~/assets/css/icons.css" rel="stylesheet" asp-append-version="true" />
     
     <style>
+        /* Gradient transparent - color - transparent */
+
+        hr.customHR {
+            border: 0;
+            height: 1px;
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+        }
         .trShadow {
             border: 1px solid lightblue;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
