--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -44,23 +44,23 @@
                                             @{
                                                 int nCounter = 0;
                                                 string sCounter = "";
-                                                foreach (var dt in Model.DocumentTypes)
+                                                foreach (var dt in Model.vwAssetDocuments)
                                                 {
                                                     nCounter++;
                                                     sCounter = nCounter < 10 ? '0' + nCounter.ToString() : nCounter.ToString();
                                                     <tr>
                                                         <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
                                                         <td class="text-muted fs-15 fw-semibold">@dt.Name</td>
-                                                        <td class="text-muted fs-15 fw-semibold">Not available...</td>
+                                                        <td class="text-muted fs-15 fw-semibold">@dt.DocumentUrl</td>
                                                         <td class="text-muted fs-15 fw-semibold">
                                                             <div class="d-flex align-items-stretch">
-                                                                <a href="#" onclick="showCardUpload(@dt.Id)" class="btn btn-sm btn-outline-info border me-2">
+                                                                <a href="#" onclick="showCardUpload(@dt.DocumentTypeId)" class="btn btn-sm btn-outline-info border me-2">
                                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
                                                                         <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
                                                                         <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
                                                                     </svg>
                                                                 </a>
-                                                                <a href="#" onclick="deleteDocument(@dt.Id)" 
+                                                                <a href="#" onclick="deleteDocument(@dt.DocumentTypeId)" 
                                                                 class="btn btn-sm btn-outline-secondary border me-2"
                                                                    data-bs-toggle="dropdown" aria-expanded="false">
                                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
@@ -70,9 +70,9 @@
                                                                 </a>
                                                                 <div class="dropdown-menu" style="">
                                                                     <div class="p-5">
-                                                                        <h4 class="dropdown-title">Delete Document</h4><br />
-                                                                        <p>You will not be able to recover this document!<br /><br />Are you sure?</p>
-                                                                        <a asp-area="Users" asp-controller="Asset" asp-action="DeleteDocument" class="btn btn-primary btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> Delete Document</a>
+                                                                        <h4 class="dropdown-title text-secondary">Delete Document</h4><br />
+                                                                        <p>You will not be able to recover this document again<br /><br />Are you sure?</p>
+                                                                        <a asp-area="Users" asp-controller="Asset" asp-action="DeleteDocument" class="btn btn-secondary btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> Delete Document</a>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -96,12 +96,12 @@
                             <div class="card-body">
                                 <form method="post" asp-action="UploadDocument" enctype="multipart/form-data">
                                     <input asp-for="Id" hidden />
-                                    <input asp-for="DocumentTypeId" hidden />
+                                    <input type="hidden" id="DocumentTypeId" name="DocumentTypeId" value="0"/>
 
                                     <div class="form-group">
                                         <label class="form-label" id="lblDocumentName"></label>
-                                        <input class="form-control file-input form-control-sm" type="file" id="document" name="document">
-                                        <span asp-validation-for="DocumentUrl" class="text-danger"></span>
+                                        <input class="form-control file-input form-control-sm" type="file" id="file" name="file">
+                                        <span asp-validation-for="DocumentTypeId" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
                                         <button class="btn btn-primary btn-sm"><i class="fa fa-solid fa-upload"></i> Upload</button>
@@ -172,7 +172,7 @@
         }
 
         const deleteDocument = (id) => {
-        
+            
         }
 
         const getDocumentName = (id) => {
@@ -181,7 +181,9 @@
             if (sData != "No Records Found") {
                 var Data = JSON.parse(sData);
                 Data.forEach((e)=>{
-                    if(e.Id == id){
+                    if(e.Id == id)
+                    {
+                        $("#DocumentTypeId").val("").val(e.Id);
                         $("#lblDocumentName").html("").html(e.Name);
                     }
                 });
